# Sen4CAP

./: CHANGELOG_SEN4CAP.md  FAQ.md  sen2agri.pro
QtWebApp/: QtWebApp.pro
QtWebApp/httpserver/: httprequest.cpp
QtWebApp/logging/: filelogger.h  logger.cpp  logger.h
QtWebApp/templateengine/: template.h
database/03-tables/: 02.config_category.sql  05.config_metadata.sql  07.processor.sql  105.satellite.sql  106.downloader_history.sql  108.fmask_history.sql  108.l1_tile_history.sql  111.scheduled_tasks.sql  112.datasource.sql  15.product.sql  17.node_resource_log.sql  auxdata_descriptor.sql  auxdata_file.sql  auxdata_operation.sql  auxdata_operation_file.sql  component.sql  crop_quality.sql  default_scheduled_tasks.sql  log.sql  s2_tile_dem_statistics.sql  severity.sql  site_auxdata.sql  stratum.sql  stratum_type.sql  yield_estimation_method.sql
database/04-views/: v_site_config.sql
database/05-functions/: 107.sp_get_processors.sql  112.sp_get_scheduled_tasks.sql  114.sp_get_products.sql  114.sp_get_products_by_inserted_time.sql  (+46 more)
docker/: docker-compose.yml
era5-downloader/: weather.py  weather_launcher.py
install_platform/: install_conda_sen4cap.sh  sen2agriCreateDistribution.sh  sen2agriPlatformInstallAndConfig.sh  update.sh  update_db_only.sh
packaging/: Sen2AgriAppBuild.sh  Sen2AgriPlatformBuild.sh  Sen2AgriProcessorsBuild.sh  Sen2AgriWebSiteBuild.sh
python-libs/: db_commons.py  l2a_commons.py  sen2agri_common_db.py
scripts/: check_l3B_inputs_v01.py  crop-map-s4s.py  crop-type-parcels.py  crop-type-parcels2.py  crop-type-wrapper.py  data-preparation-s4s.py  data-preparation.py  delete_site.py  dem-histograms.py  export-product.py  extract-parcels.py  extract-parcels2.py  import-product-details.py  insert_l2a_product_to_db.py  job_operations.py  merge-sar.py  optimize_gtiff.py  read_shp_cols.py  sample-selection.py  sen2agri_common.py  t-rex-genconfig.py
sen2agri-common/: json_utils.cpp  json_utils.hpp  model.cpp  model.hpp  pch.hpp  sen2agri-common.pro
sen2agri-config/: pch.hpp
sen2agri-ctl/: sen2agri-ctl.py
sen2agri-dashboard/: ConfigParams.php  config.php  create_site.php  getProcessorNewConfig.php  ms_head.php
sen2agri-executor/: abstractexecinfosprotsrv.cpp  configurationmgr.cpp  configurationmgr.h  iprocessorwrappermsgslistener.h  main.cpp  orchestratorrequestshandler.cpp  orchestratorrequestshandler.h  pch.hpp  persistenceitfmodule.cpp  persistenceitfmodule.h  requestparamsbase.h  requestparamscanceltasks.cpp  requestparamsexecutioninfos.cpp  requestparamsjobops.cpp  requestparamsjobops.h  requestparamssubmitsteps.cpp  sen2agri-executor.pro  slurmsacctresultparser.cpp  slurmsacctresultparser.h
sen2agri-http-listener/: requestmapper.hpp
sen2agri-http-server-common/: abstracthttpcontroller.cpp  abstracthttpcontroller.h  abstracthttplistener.cpp  abstracthttplistener.h  abstracthttprequest.h  abstracthttpresponse.h  httpserver.cpp  httpserver.h  qtwebapphttplistener.cpp  qtwebapphttplistener.h  qtwebapphttprequest.cpp  qtwebapphttprequest.h  qtwebapphttprequestmapper.cpp  qtwebapphttprequestmapper.hpp  qtwebapphttpresponse.cpp  qtwebapphttpresponse.h  requestmapperbase.cpp  requestmapperbase.h  sen2agri-http-server-common.pro
sen2agri-orchestrator/: eventprocessingcontext.cpp  eventprocessingcontext.hpp  executioncontextbase.cpp  executioncontextbase.hpp  main.cpp  orchestrator.cpp  orchestrator.hpp  orchestratorworker.cpp  orchestratorworker.hpp  pch.hpp  processorhandler.cpp  processorhandler.hpp  processorhandlerhelper.cpp  processorhandlerhelper.h  productdetailsbuilder.cpp  productdetailsbuilder.h  sen2agri-orchestrator.pro  stepexecutiondecorator.cpp  stepexecutiondecorator.h
sen2agri-persistence/: pch.hpp  persistencemanager.cpp  persistencemanager.hpp
sen2agri-processor-wrapper/: pch.hpp
sen2agri-processors/: CMakeLists.txt
sen2agri-processors/Common/ComputeIntervalCounts/: CMakeLists.txt  ComputeIntervalCounts.cxx  otbStreamingHistogramImageFilter.h  otbStreamingHistogramImageFilter.hxx
sen2agri-processors/Common/GenericComposite/: CMakeLists.txt  otbSen4XGenericComposite.cxx  otbSen4XGenericComposite2.cxx
sen2agri-processors/Common/GenericComposite/include/: otbCompositeFunctor.h  otbCountValidPixelsFunctor.h  otbImageListCompositeFilter.h  otbLastValueCompositeFunctor.h  otbMaxCompositeFunctor.h  otbMeanCompositeFunctor.h  otbMedianCompositeFunctor.h  otbMinCompositeFunctor.h  otbWeightedAverageCompositeFunctor.h
sen2agri-processors/Common/RadiometricIndices/: CMakeLists.txt  otbSen4XRadiometricIndices.cxx
sen2agri-processors/Common/RadiometricIndices/include/: otbIndicesStackFunctor.h  otbRadiometricIndex.h  otbSoilIndicesFunctor.h  otbVegetationIndicesFunctor.h  otbWaterIndicesFunctor.h
sen2agri-processors/Sen4CAP/CropType/Composite/: CMakeLists.txt  Composite.cpp  Composite2.cpp
sen2agri-processors/Sen4CAP/MarkersDatabase/MD_P1_BasicMarkers/src/: CMakeLists.txt  otbMarkers1CsvMerge.cxx  otbMarkers1CsvWriter.h  otbMarkers1CsvWriter.txx  otbMarkers1Extractor.cxx  otbMarkers2Extractor.cxx  otbMaskedIteratorDecorator.h  otbMaskedIteratorDecorator.txx  otbOGRDataToClassStatisticsFilter.h  otbOGRDataToClassStatisticsFilter.txx  otbPersistentSamplingFilterBase.h  otbPersistentSamplingFilterBase.txx
sen2agri-processors/Sen4Stat/S4S_PermanentCrops/: CMakeLists.txt
sen2agri-processors2/: CMakeLists.txt
sen2agri-processors2/S4SCMSpectralIndicesStatistics/: CMakeLists.txt  S4SCMSpectralIndicesStatistics.cpp
sen2agri-processors2/TemporalResampling/: CMakeLists.txt  TemporalResampling.cpp  constant_step_interpolation_masked.cpp  engeMaskSerieFilter.h  engeMaskSerieFilter.txx  engeStepInterpolationFilter.h  engeStepInterpolationFilter.txx
sen2agri-scheduler/: databasetaskloader.cpp  databasetaskloader.hpp  httporchestratorproxy.cpp  httporchestratorproxy.hpp  main.cpp  schedulerapp.cpp  schedulerapp.hpp  sen2agri-scheduler.pro  taskplanner.cpp
tests/: main.cpp  pch.hpp  producthandlertests.cpp  producthandlertests.h  serialization-ops.cpp  serialization-ops.hpp  testorcherstratorproxy.cpp  tests.pro
(+419 files in other folders)
